# open_spiel

./: CMakeLists.txt  Makefile
bad_results_10k/: cfr_db_output_2.txt  cfr_db_output_3.txt  cfr_db_output_5.txt
open_spiel/: CMakeLists.txt
open_spiel/algorithms/: CMakeLists.txt
open_spiel/bots/: CMakeLists.txt
open_spiel/examples/: CMakeLists.txt  cfr_db.cc  database_game.cc
open_spiel/games/: CMakeLists.txt  database.cc  database.h  db.cc  db.h
open_spiel/python/examples/: treeviz_example.py
open_spiel/scripts/: build_and_run_tests.sh
open_spiel/tests/: CMakeLists.txt
open_spiel/utils/: CMakeLists.txt
results_10k/: .cfr_db_output_4.txt.swp  cfr_db_output_1.txt  cfr_db_output_4.txt
sql/tpch/: CREDITS
tpcc/: out1.txt  out2.txt  out3.txt  plot.py
tpcc_old/: cfr_db_output_1.txt  cfr_db_output_2.txt  cfr_db_output_3.txt  out1.txt  out2.txt  out3.txt  plot.py
